2004-10-04  Inge Wallin  <inge@lysator.liu.se>

	* Cleaned the following files a little.  Made the code more
	readable, fixed indentation, added (a few) comments:
	(Man, there are a lot of coding styles in there...)
	- kchart_part.h
	- kchart_part.cc
	
	* Cleaned the following files a little.  Made the code more
	readable, fixed indentation, added (a few) comments:
	- kchart.la.cc
	- main.cc
	- kchart_dummy.cc
	- kchart_aboutdata.h
	- kchart_factory.h
	- kchart_factory.cc
	- kchart_params.h
	- kchart_params.cc
	- kchart_view.h
	- kchart_view.cc

